cabal-version: 2.2
name:          hadrian-bootstrap-gen
version:       0

executable hadrian-bootstrap-gen
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
    , aeson                  ^>=1.5.2.0
    , base                   ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0
    , bytestring             ^>=0.10.8.2
    , Cabal                  ^>=3.2.0.0
    , cabal-install-parsers  ^>=0.3.0.1
    , cabal-plan             ^>=0.7.0.0
    , containers             ^>=0.6.0.1
    , text                   ^>=1.2.3.0
    , topograph              ^>=1.0.0.1
    , transformers           ^>=0.5.6.2
