cabal-version: 2.2
name:          hadrian-bootstrap-gen
version:       0

executable hadrian-bootstrap-gen
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
    , aeson                  ^>=2.2.0.0
    , base
    , bytestring             ^>=0.12.2.0
    , Cabal
    , cabal-install-parsers  ^>=0.6.2.0
    , cabal-plan             ^>=0.7.0.0
    , containers             ^>=0.6.0.1
    , text                   ^>=2.1.0.0
    , topograph              ^>=1.0.0.1
    , transformers           ^>=0.6.0.0
