cabal-version:       >= 1.10
name:                ansi-wl-pprint
version:             0.6.9
x-revision:          2

category:            User Interfaces, Text
synopsis:            The Wadler/Leijen Pretty Printer for colored ANSI terminal output
description:         {

This is a pretty printing library based on Wadler's paper ["A Prettier Printer"](https://homepages.inf.ed.ac.uk/wadler/papers/prettier/prettier.pdf).
It has been enhanced with support for ANSI terminal colored output using the [ansi-terminal](https://hackage.haskell.org/package/ansi-terminal) package.

}
license:             BSD3
license-file:        LICENSE
extra-source-files:  README.md Changelog.md
author:              Daan Leijen, Max Bolingbroke
maintainer:          Edward Kmett <ekmett@gmail.com>
bug-reports:         http://github.com/ekmett/ansi-wl-pprint/issues
homepage:            http://github.com/ekmett/ansi-wl-pprint
build-type:          Simple
tested-with:         GHC==7.0.2, GHC==7.2.2, GHC==7.4.2, GHC==7.6.3, GHC==7.8.4, GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.3, GHC==8.6.5, GHC==8.8.1

source-repository head
  type: git
  location: https://github.com/ekmett/ansi-wl-pprint.git

flag Example
  description:    Build the example application
  default:        False
  manual:         True

library
  default-language: Haskell2010
  hs-source-dirs: .
  exposed-modules: Text.PrettyPrint.ANSI.Leijen
                 , Text.PrettyPrint.ANSI.Leijen.Internal
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-matches

  -- See https://ghc.haskell.org/trac/ghc/wiki/Migration/8.0#base-4.9.0.0
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances
    if impl(ghc < 8.8)
      ghc-options: -Wnoncanonical-monadfail-instances
  else
    -- see also notes in Text.PrettyPrint.ANSI.Leijen
    build-depends: semigroups >= 0.18.5 && < 0.20

  build-depends: ansi-terminal >= 0.9.1 && < 0.12
  build-depends: base >= 4.3 && < 5

  if impl(ghc >= 7.4)
    default-extensions: Safe
  else
    if impl(ghc >= 7.2)
      default-extensions: Trustworthy

executable ansi-wl-pprint-example
  default-language: Haskell2010
  hs-source-dirs: src-exe
  main-is: Example.hs

  if flag(example)
    build-depends: ansi-wl-pprint
    -- dependencies whose constraints are inherited via lib:ansi-wl-pprint
    build-depends: base, ansi-terminal
  else
    buildable: False
